# LFM_Entropy

./: README.md  hyperparameters.json  pyproject.toml  training.json
src/lfmodel/: adaptive_linear.py  channel_mixing.py  entropy_regularization.py  lf_model.py  main.py  mixture_of_experts.py  token_mixing.py  train.py
